package behavioral.commandPattern;

interface Command {

    void execute();

    void undo();

}
